# btck

./: .clang-format  .clang-tidy  .iwyu  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
bindings/go/btck/: block.go  error.go  go.mod  scriptpubkey.go  transaction.go  transaction_output.go  util.go
bindings/java/: CMakeLists.txt
bindings/java/src/: Block.c  Block.java  Chain.c  Chain.java  ScriptPubkey.c  ScriptPubkey.java  Transaction.c  Transaction.java  TransactionOutput.c  TransactionOutput.java
bindings/julia/: Project.toml
bindings/julia/src/: BtcK.jl
bindings/lua/: CMakeLists.txt  btck.c
bindings/lua/src/: block.c  chain.c  script_pubkey.c  transaction.c  transaction_output.c
bindings/python/: CMakeLists.txt  btck.c  btck.pyi
bindings/python/src/: _bytes_writer.c  _bytes_writer.h  _error.c  _error.h  _slice.c  _slice.h  _util.c  _util.h  block.c  block.h  block_hash.c  block_hash.h  chain.c  chain.h  script_pubkey.c  script_pubkey.h  script_verify.c  script_verify.h  transaction.c  transaction.h  transaction_output.c  transaction_output.h  verification_flags.c  verification_flags.h
bindings/rust/: Cargo.toml
bindings/rust/src/: block.rs  chain.rs  error.rs  ffi.rs  lib.rs  script_pubkey.rs  transaction.rs  transaction_output.rs
bindings/swift/: CMakeLists.txt  btck+.swift  btck.swift  error.swift  module.modulemap  script_pubkey.swift  transaction.swift  transaction_output.swift
bindings/vala/: CMakeLists.txt  README.md  btck.vapi
cmake/modules/: FindGo.cmake  FindVala.cmake
doc/: CMakeLists.txt  conf.py.in  index.rst
doc/design/: composability.rst  delegates.rst  enumerations.rst  error_handling.rst  memory_management.rst  naming_conventions.rst  object_lifetime.rst  packaging.rst  symbol_visibility.rst  testing.rst
include/btck/: btck.h  btck.hpp  btck_error.hpp
src/: block.cpp  block.hpp  btck.cpp  btck_block.cpp  btck_error.cpp  btck_script_pubkey.cpp  btck_transaction.cpp  btck_transaction_output.cpp  chain.cpp  chain.hpp  script_flags.c  script_pubkey.cpp  script_pubkey.hpp  transaction.cpp  transaction.hpp  transaction_output.cpp  transaction_output.hpp  verification_error.c  verification_error.cpp  verification_flags.c  verify.cpp
src/util/: api.hpp  as_bytes.hpp  error.c  error.cpp  error.hpp  ref_counted.hpp  type_mapping.hpp  writer_stream.hpp
test/c/: CMakeLists.txt  btck.c  main.c
test/cpp/: CMakeLists.txt  block.cpp  transaction.cpp  verify.cpp
test/genie/: CMakeLists.txt  main.gs  transaction.gs
test/go/: CMakeLists.txt  go.mod  transaction_test.go
test/nodejs/: CMakeLists.txt  transaction.test.js
test/python/: CMakeLists.txt  __init__.py  test_script.py  test_script_verify.py  test_transaction.py
test/rust/: CMakeLists.txt  Cargo.toml  build.rs
test/rust/src/: transaction.rs
test/swift/: CMakeLists.txt  test_main.swift  transaction.swift
test/vala/: CMakeLists.txt  main.vala  transaction.vala
